# pyars

./: LICENSE  README.md  RELEASE_NOTES.md  example.py  new-spec.py  pyproject.toml  requirements.txt  setup.py
docs/: FULL_DOCUMENTATION.md
experiments/: ollama_tool_usage.py
pyars/: __init__.py  argument_types.py  container.py  impl.py
pyars/argument/: __init__.py  base.py  command.py  flag.py  option.py  positional.py  value.py
tests/: test_annotations.py  test_pyars.py
