[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyars"
version = "0.1.0"
description = "A simple wrapper for argparse."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Cjw"}]
dependencies = [
    "attrs",
]

